--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
           </div>
         </div>
         <form id="my-form" action="https://formspree.io/f/mzbnppwq" method="POST">
-          <div class="w-full lg:mx-auto lg:w-2/3">
+          <div class="w-full mb-18 lg:mx-auto lg:w-2/3">
             <div class="w-full px-4 mb-8">
               <label for="name" class="text-base font-bold text-smooth">Nama</label>
               <input type="text" name="name" id="name" class="w-full p-3 rounded-md bg-slate-200 text-dark focus:border-smooth focus:outline-none focus:ring-1 focus:ring-smooth" />
