Menampilkan sertifikat baru

--- a/index.html
+++ b/index.html
@@ -236,6 +236,11 @@
           </div>
           <div class="w-full px-4 lg:w-1/2 xl:w-1/3">
             <div class="mb-10 overflow-hidden bg-white shadow-lg rounded-xl">
+              <img src="dist/img/certificate/pkl.jpg" alt="Programming" class="w-full transition-transform transform hover:scale-110" />
+            </div>
+          </div>
+          <div class="w-full px-4 lg:w-1/2 xl:w-1/3">
+            <div class="mb-10 overflow-hidden bg-white shadow-lg rounded-xl">
               <img src="dist/img/certificate/8.png" alt="Programming" class="w-full transition-transform transform hover:scale-110" />
             </div>
           </div>
