--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="absolute top-0 left-0 z-10 flex items-center w-full bg-dark">
       <div class="container">
         <div class="relative flex items-center justify-between">
-          <div class="flex items-center justify-center px-4 py-8 mx-auto">
+          <div class="flex items-center justify-center px-4 py-8 mx-auto lg:py-0">
             <button id="hamburger" name="hamburger" type="button" class="absolute block right-4 lg:hidden">
               <span class="transition duration-300 ease-in-out origin-top-left hamburger-line"></span>
               <span class="transition duration-300 ease-in-out hamburger-line"></span>
