adjust the hero section

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <!-- Header End -->
 
     <!-- Hero Section Start -->
-    <section id="home" class="pt-20">
+    <section id="home" class="pt-20 lg:pt-0">
       <div class="container">
         <div class="flex flex-wrap">
           <div class="self-center w-full pl-20 lg:w-1/2">
